souscription d'un abonnement disponible

--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -380,16 +380,16 @@
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
-                        <div class="single-service-item">
-                            <div class="single-service-icon">
-                                <i class="flaticon-car-1"></i>
-                            </div>
-                            <h2><a href="#">insurence support</a></h2>
-                            <p>
-                                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut den fugit sed quia.
-                            </p>
-                        </div>
-                    </div>
+    <div class="single-service-item">
+        <div class="single-service-icon">
+            <i class="flaticon-car-1"></i>
+        </div>
+        <h2><a href="{{ path('choisir_abonnement') }}">S'abonner</a></h2>
+        <p>
+            Choisissez un abonnement pour bénéficier de nos services exclusifs.
+        </p>
+    </div>
+</div>
                 </div><!--/.row-->
             </div><!--/.service-content-->
         </div><!--/.container-->
